--- a/kazinov-versus-test/src/client/index.html
+++ b/kazinov-versus-test/src/client/index.html
@@ -2,9 +2,13 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>kazinov versus task</title>
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
 yoyoyo bitch
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="src/client/app.js"></script>
 </body>
 </html>
