--- a/kazinov-versus-test/src/client/index.html
+++ b/kazinov-versus-test/src/client/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="kazinov-versus-task">
 <head lang="en">
+    <base href="/"/>
     <meta charset="UTF-8">
     <title>kazinov versus task</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-yoyoyo bitch
+<div class="container-fluid" data-ui-view="">
+
+</div>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="src/client/app.js"></script>
+<script src="src/client/object-details/module.js"></script>
+<script src="src/client/object-details/routes.js"></script>
+<script src="src/client/object-details/ObjectDetailsController.js"></script>
 </body>
 </html>
