--- a/kazinov-versus-test/src/client/index.html
+++ b/kazinov-versus-test/src/client/index.html
@@ -16,5 +16,6 @@
 <script src="src/client/object-details/module.js"></script>
 <script src="src/client/object-details/routes.js"></script>
 <script src="src/client/object-details/ObjectDetailsController.js"></script>
+<script src="src/client/object-details/object-details-directive/objectDetailsDirective.js"></script>
 </body>
 </html>
