--- a/kazinov-versus-test/src/client/index.html
+++ b/kazinov-versus-test/src/client/index.html
@@ -13,8 +13,8 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="src/client/app.js"></script>
-<script src="src/client/object-details/module.js"></script>
-<script src="src/client/object-details/routes.js"></script>
+<script src="src/client/routes.js"></script>
+<script src="src/client/dataService.js"></script>
 <script src="src/client/object-details/ObjectDetailsController.js"></script>
 <script src="src/client/object-details/object-details-directive/objectDetailsDirective.js"></script>
 </body>
